@@ -37,8 +37,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jacoco.min.linecoverage>0.70</jacoco.min.linecoverage>
-    <jacoco.min.branchcoverage>0.65</jacoco.min.branchcoverage>
+    <jacoco.min.linecoverage>0.66</jacoco.min.linecoverage>
+    <jacoco.min.branchcoverage>0.62</jacoco.min.branchcoverage>
 
     <javaModulesSurefireArgLine>
       --add-opens io.clientcore.core/io.clientcore.core.annotations=ALL-UNNAMED
@@ -55,13 +55,11 @@
       --add-opens io.clientcore.core/io.clientcore.core.implementation.http.serializer=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.implementation.utils=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.models=ALL-UNNAMED
-      --add-opens io.clientcore.core/io.clientcore.core.shared=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.utils=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.utils.configuration=ALL-UNNAMED
 
       --add-reads io.clientcore.core=ALL-UNNAMED
 
-      --add-exports io.clientcore.core/io.clientcore.core.shared=ALL-UNNAMED
       --add-exports io.clientcore.core/io.clientcore.core.implementation=ALL-UNNAMED
       --add-exports io.clientcore.core/io.clientcore.core.implementation.instrumentation.fallback=ALL-UNNAMED
     </javaModulesSurefireArgLine>
@@ -113,12 +111,6 @@
       <groupId>org.openjdk.jmh</groupId>
       <artifactId>jmh-generator-annprocess</artifactId>
       <version>1.37</version> <!-- {x-version-update;org.openjdk.jmh:jmh-generator-annprocess;external_dependency} -->
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.conscrypt</groupId>
-      <artifactId>conscrypt-openjdk-uber</artifactId>
-      <version>2.5.2</version> <!-- {x-version-update;org.conscrypt:conscrypt-openjdk-uber;external_dependency} -->
       <scope>test</scope>
     </dependency>
   </dependencies>
